--- a/Skeleton/Api/Application/Command/NewCommand.php.twig
+++ b/Skeleton/Api/Application/Command/NewCommand.php.twig
@@ -13,57 +13,52 @@ use Sfynx\DddBundle\Layer\Application\Generalisation\Command\AbstractCommand;
  */
 class NewCommand extends AbstractCommand
 {
-
-    {% for field in entityFields %}
-    {%  if field.type!="id"%}
+{% for field in entityFields %}
+{% if field.type!="id" %}
+    /** @var {{ field.type }} ${{ field.name }} */
     protected ${{ field.name }};
-    {% endif %}
-    {% endfor %}
 
-    {% set constructorArgs = "" %}
-    {% for field in entityFields %}
-    {% if field.type!="id" %}
-    {% set var = '$' ~ field.name ~ ', '  %}
-    {% set constructorArgs = constructorArgs ~ var%}
-    {% endif %}
-    {% endfor %}
-
-    {% set constructorArgs = constructorArgs|trim(", ") %}
-
+{% endif %}
+{% endfor %}
+{% set constructorArgs = "" %}
+{% for field in entityFields %}
+{% if field.type != "id" %}
+{% set var = '$' ~ field.name ~ ', '  %}
+{% set constructorArgs = constructorArgs ~ var%}
+{% endif %}
+{% endfor %}
+{% set constructorArgs = constructorArgs|trim(", ") %}
     /**
      * NewCommand constructor.
-     {% for field in entityFields %}
+{% for field in entityFields %}{% if field.type != "id" %}
      * @param ${{ field.name }}
-     {% endfor %}
+{% endif %}{% endfor %}
      */
     public function __construct({{ constructorArgs }})
     {
-     {% for field in entityFields %}
-     {% if field.type != "id"%}
+{% for field in entityFields %}{% if field.type != "id" %}
      $this->{{ field.name }} = ${{ field.name }};
-     {% endif %}
-     {% endfor %}
+ {% endif %}{% endfor %}
     }
+{% for field in entityFields %}{% if field.type != "id" %}
 
-    {% for field in entityFields %}
-    {% if field.type!="id" %}
     /**
-    * @return mixed
-    */
+     * @return {{ field.type }}
+     */
     public function get{{ field.name|ucfirst }}()
     {
         return $this->{{ field.name }};
     }
 
     /**
-    * @param mixed {{ field.name }}
-    */
+     * @param mixed {{ field.type }}
+     * @return $this
+     */
     public function set{{ field.name|ucfirst }}(${{ field.name }})
     {
         $this->{{ field.name }} = ${{ field.name }};
+        return $this;
     }
-    {% endif %}
-    {% endfor %}
-
+{% endif %}{% endfor %}
 }
 
