--- a/Skeleton/Api/Application/Command/Handler/Validation/ValidationHandler/NewCommandValidationHandler.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Validation/ValidationHandler/NewCommandValidationHandler.php.twig
@@ -14,12 +14,18 @@ use Symfony\Component\Validator\Constraints\NotBlank;
  */
 class NewCommandValidationHandler extends AbstractCommandValidationHandler
 {
+    /**
+     * Init the constraints the creating entity properties must validate
+     *
+     * @return $this
+     */
     protected function initConstraints()
     {
-{% for field in entityFields %}
-{% if field.type !="id" %}
-        $this->add('{{ field.name }}',  new NotBlank());
+{% if entityFields %}
+        $this{% for field in entityFields %}{% if field.type !="id" %}->add('{{ field.name }}', new NotBlank()){% if loop.index < entityFields|length %}
+            {% else %};{% endif %}{% endif %}{% endfor %}
 {% endif %}
-{% endfor %}
+
+        return $this;
     }
 }
