--- a/Skeleton/Api/Domain/Service/Processor/ProPersistsProcess.php.twig
+++ b/Skeleton/Api/Domain/Service/Processor/ProPersistsProcess.php.twig
@@ -4,16 +4,27 @@ namespace {{ projectName }}\Domain\Service\{{ entityName }}\Processor;
 
 use Sfynx\DddBundle\Layer\Domain\Generalisation\Processor\ProcessInterface;
 use Sfynx\DddBundle\Layer\Infrastructure\Logger\Generalisation\TraitLogger;
-use {{ projectName }}\Domain\Entity\Actor;
+use {{ projectName }}\Domain\Entity\{{ entityName }};
 
+/**
+ * Class PostPersistProcess
+ *
+ * @category {{ projectName }}
+ * @package Domain
+ * @subpackage Service\Processor
+ */
 class PostPersistProcess implements ProcessInterface
 {
     use TraitLogger;
 
+    /**
+     * Process that will be executed after the persistence.
+     * @param \stdClass $entity
+     */
     public function update($entity)
     {
         if ($entity instanceof {{ entityName }}) {
-            $this->logger->info("post persist {{ entityName }} with id : ".$entity->getId()->id()." \n");
+            $this->logger->info('post persist {{ entityName }} with id: ' . $entity->getId()->id() . PHP_EOL);
         }
     }
 }
